2001-04-10 John R. Jackson <jrj@purdue.edu>

	* docs/INSTALL: Update location to GNUPLOT per Lars Hecking
	  <lhecking@nmrc.ie>.

2001-04-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* config/config.guess: Upgrade from ftp://ftp.gnu.org/pub/gnu/config
	* config/config.sub: Upgrade from ftp://ftp.gnu.org/pub/gnu/config
	* config/mkinstalldirs: Upgrade from automake CVS.

2001-04-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* config/depcomp: new file for automake.

2001-04-03 John R. Jackson <jrj@purdue.edu>

	* Makefile.am: Remove *.test.c from the distribution.

2001-04-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Upgrade to the 2.5.0 code.

	* changer-src/chg-zd-mtx.sh.in: Added barcode reader support,
	>9 tape slot support, variable for 'offline' or 'ONLINE'
	return value of tape device, and multi-config support.  Moved
	all user settable variables to 'changerfile'.conf in the
	amanda config directory.  Added commented out example of .conf
	file into script.
	* NEWS: updated chg-zd-mtx.sh.in changer.

2001-04-02 John R. Jackson <jrj@purdue.edu>

	* NEWS: Initial notes for 2.4.2p2.

2001-03-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/getfsent.c (search_fstab): If the device doesn't 
	exist, it will take the entry from /etc/mtab.

2001-03-26 John R. Jackson <jrj@purdue.edu>

	* server-src/amtape.c: Do not rewind for slot "advance".  Do not report
	  device name (which is bogus) for slot "advance".

2001-03-23 John R. Jackson <jrj@purdue.edu>

	* example/amanda.conf.in: Add warning that the sample amanda.conf
	  will not work as is and must be edited to match the installation.

2001-03-21 John R. Jackson <jrj@purdue.edu>

	* recover-src/extract_list.c (extract_files_child): Fix problem that
	  caused xfsrestore arg list to not be NULL terminated.

2001-03-19 John R. Jackson <jrj@purdue.edu>

	* configure.in: Add --with-debug-days (default is 4) and remove
	  --with-pid-debug-files.